--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,11 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_about">
+    app:startDestination="@+id/nav_tasks">
 
+    <fragment
+        android:id="@+id/nav_tasks"
+        android:name="com.example.taskman.Fragments.TasksFragment"
+        android:label="@string/menu_tasks"
+        tools:layout="@layout/fragment_tasks" />
     <fragment
         android:id="@+id/nav_about"
         android:name="com.example.taskman.Fragments.AboutFragment"
-        android:label="@string/menu_home"
+        android:label="@string/menu_about"
         tools:layout="@layout/fragment_about" />
 </navigation>
