--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -10,6 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/taskRecyclerView"
-        android:layoutAnimation="@anim/tasks_layout_animation"/>
+        android:layoutAnimation="@anim/tasks_layout_anim"/>
 
 </LinearLayout>
