--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,6 +11,6 @@
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_baseline_info_24"
-            android:title="@string/menu_tasks" />
+            android:title="@string/menu_about" />
     </group>
 </menu>
