--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,4 +15,10 @@
         android:name="com.example.taskman.Fragments.AboutFragment"
         android:label="@string/menu_about"
         tools:layout="@layout/fragment_about" />
+
+    <fragment
+        android:id="@+id/nav_create_update"
+        android:name="com.example.taskman.Fragments.CreateUpdateFragment"
+        android:label="Best Quotes"
+        tools:layout="@layout/fragment_create_update" />
 </navigation>
