--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,6 +19,6 @@
     <fragment
         android:id="@+id/nav_create_update"
         android:name="com.example.taskman.Fragments.CreateUpdateFragment"
-        android:label="Best Quotes"
+        android:label="@string/menu_tasks"
         tools:layout="@layout/fragment_create_update" />
 </navigation>
