--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,10 @@
             android:icon="@drawable/task_man_logo"
             android:title="@string/menu_tasks" />
         <item
+            android:id="@+id/nav_random"
+            android:icon="@drawable/ic_baseline_idea_24"
+            android:title="@string/menu_random" />
+        <item
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_baseline_info_24"
             android:title="@string/menu_about" />
