--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -11,6 +11,11 @@
         android:label="@string/menu_tasks"
         tools:layout="@layout/fragment_tasks" />
     <fragment
+        android:id="@+id/nav_random"
+        android:name="com.example.taskman.Fragments.RandomFragment"
+        android:label="@string/menu_random"
+        tools:layout="@layout/fragment_random" />
+    <fragment
         android:id="@+id/nav_about"
         android:name="com.example.taskman.Fragments.AboutFragment"
         android:label="@string/menu_about"
