--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="yellow">#FFEEEE55</color>
+    <color name="green">#FF00FF00</color>
     <color name="grey">#FFDDDDDD</color>
 </resources>
