Add settings page

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,4 +26,9 @@
         android:name="com.example.taskman.Fragments.CreateUpdateFragment"
         android:label="@string/menu_tasks"
         tools:layout="@layout/fragment_create_update" />
+
+    <fragment
+        android:id="@+id/nav_settings"
+        android:name="com.example.taskman.Fragments.SettingsFragment"
+        android:label="SettingsFragment" />
 </navigation>
