--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -31,4 +31,9 @@
         android:id="@+id/nav_settings"
         android:name="com.example.taskman.Fragments.SettingsFragment"
         android:label="SettingsFragment" />
+    <fragment
+        android:id="@+id/nav_credits"
+        android:name="com.example.taskman.Fragments.CreditsFragment"
+        android:label="@string/menu_credits"
+        tools:layout="@layout/fragment_credits" />
 </navigation>
