--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -31,4 +31,13 @@
         android:layout_marginBottom="16dp"
         app:srcCompat="@drawable/ic_baseline_add_24" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/socialfab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|end"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginTop="80dp"
+        app:srcCompat="@drawable/reddit_icon" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
