--- a/app/src/main/res/layout/fragment_create_update.xml
+++ b/app/src/main/res/layout/fragment_create_update.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,7 +19,8 @@
         android:adjustViewBounds="true"
         android:src="@drawable/ic_menu_camera" />
 
-    <!-- Added textboxes to input quote info-->
+
+    <!-- Added textboxes to input task info-->
     <TextView
         android:id="@+id/taskTitleLabel"
         android:layout_width="wrap_content"
@@ -96,6 +98,8 @@
         android:layout_height="wrap_content"
         android:layout_columnSpan="2"
         android:text="Submit" />
+
+
 
 </GridLayout>
 </ScrollView>
