--- a/app/src/main/res/layout/fragment_random.xml
+++ b/app/src/main/res/layout/fragment_random.xml
@@ -12,7 +12,7 @@
         android:id="@+id/randomTaskName"
         android:layout_width="match_parent"
         android:layout_height="75sp"
-        android:padding="2sp"
+        android:padding="1sp"
         android:textSize="32sp"
         android:autoSizeTextType="uniform"
         android:autoSizeMinTextSize="20sp"
@@ -20,7 +20,8 @@
         android:autoSizeStepGranularity="2sp"
         android:textAlignment="center"
         android:layout_columnSpan="2"
-        android:text="@string/random_task_label" />
+        android:text="@string/random_task_label"
+        android:fontFamily="@font/montserrat_regular"/>
 
     <ImageView
         android:id="@+id/taskImageRandom"
@@ -37,7 +38,8 @@
         android:textSize="26sp"
         android:textAlignment="center"
         android:layout_columnSpan="2"
-        android:text="@string/random_type_label" />
+        android:text="@string/random_type_label"
+        android:fontFamily="@font/montserrat_regular"/>
 
     <TextView
         android:id="@+id/randomTaskPriceLabel"
@@ -45,7 +47,8 @@
         android:layout_height="wrap_content"
         android:labelFor="@id/randomTaskPrice"
         android:textSize="24sp"
-        android:text="@string/price_label" />
+        android:text="@string/price_label"
+        android:fontFamily="@font/montserrat_regular"/>
 
     <TextView
         android:id="@+id/randomTaskPrice"
@@ -53,7 +56,8 @@
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:layout_gravity="center_horizontal"
-        android:text="?" />
+        android:text="?"
+        android:fontFamily="@font/montserrat_regular"/>
 
     <TextView
         android:id="@+id/randomTaskDifficultyLabel"
@@ -61,7 +65,8 @@
         android:layout_height="wrap_content"
         android:labelFor="@id/randomTaskDifficulty"
         android:textSize="24sp"
-        android:text="@string/difficulty_label" />
+        android:text="@string/difficulty_label"
+        android:fontFamily="@font/montserrat_regular"/>
 
     <TextView
         android:id="@+id/randomTaskDifficulty"
@@ -69,7 +74,8 @@
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:layout_gravity="center_horizontal"
-        android:text="?" />
+        android:text="?"
+        android:fontFamily="@font/montserrat_regular"/>
 
     <Button
         android:id="@+id/refreshButton"
@@ -77,5 +83,6 @@
         android:layout_height="wrap_content"
         android:layout_columnSpan="2"
         android:layout_gravity="bottom"
-        android:text="@string/refresh_label" />
+        android:text="@string/refresh_label"
+        android:fontFamily="@font/montserrat_regular"/>
     </GridLayout>
