--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -25,5 +25,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_title"
+        android:textSize="22sp"
+        android:fontFamily="@font/raleway_regular"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 </LinearLayout>
