--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -29,14 +29,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Task"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:fontFamily="@font/montserrat_bold"/>
 
             <TextView
                 android:id="@+id/type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Type"
-                android:textStyle="italic"/>
+                android:textStyle="italic"
+                android:fontFamily="@font/montserrat_regular"/>
 
             <ImageView
                 android:id="@+id/taskImage"
